[package]
name = "appname"
version = "0.1.0"
authors = ["Your Name <email@address.com>"]
edition = "2018"


[lib]
crate-type = ["cdylib"]


[dependencies]
seed = { version = "0.7.0" }
wasm-bindgen-futures = "0.4.10"
js-sys = "0.3.37"
log = "0.4.6"
wasm-logger = "0.2.0"

# For serialization, eg sending requests to a server. Otherwise, not required.
serde = { version = "^1.0.85", features = ['derive'] }
serde_json = "1.0"
futures = "^0.3.4"
gloo-timers = { version = "0.2.0", features = ["futures"] }
gloo-file = { version = "0.1.0", features = ["futures"] }
ellocopo2 = { git = "https://github.com/openbuttnakedgang/ellocopo2.git", features = ["std"]}
holter-support = { git = "https://github.com/openbuttnakedgang/holter-support.git" }
syn = { version = "1.0", features = ["full", "extra-traits", "derive"] }
proc-macro2 = "1.0"

[dependencies.delta ]
version = "0.1"
git = "ssh://git@github.com:/IncartDev/delta.git"
features = ["std"]

[dependencies.wasm-bindgen]
version = "^0.2.50"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Navigator',
  'Window',
  'Response',
  'DomException',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlUniformLocation',
  'WebGlShader',
  'HtmlElement',
  'Node',
  'Window',
  'Performance',
  'FileList',
  'File',
]


[dev-dependencies]
wasm-bindgen-test = "0.2.50" # NOTE: keep in sync with wasm-bindgen version


[profile.release]  # Attempts to minimize file size
lto = true
opt-level = 'z'


[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
incremental = true
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
incremental = true
opt-level = 0
overflow-checks = false
